<?php

namespace Blackjack;

class BlackjackGame
{

    public function blackjackGameStart()
    {
        return 1;
    }
}
